Users/ramacg/chore/update dependencies (#12)
* Refactor to JDK21
* Update library versions